Fix IE11 layout issue by setting header flex-basis to auto (#58)

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,7 +32,7 @@ $primary: #1176B2;
     flex-grow: 1;
   }
   header {
-    flex: 0;
+    flex: 0 0 auto;
 
     .logo {
       display: block;
